Refactor asset management by introducing `Assets` utility; update `composer.json` with preferred install configuration and simplify asset loading in `class-gravity-ops-form-folders`.

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,12 @@
       }
     }
   },
+  "config": {
+    "preferred-install": {
+      "gravityops/core": "source",
+      "*": "dist"
+    }
+  },
   "scripts": {
     "prefix-namespaces": [
       "@php -r \"if (!file_exists('bin')) { mkdir('bin', 0755, true); }\"",
