Update GravityOps Core to v1.0.14 and enhance plugin admin UIs
Upgraded all plugins to require GravityOps Core version 1.0.14 for consistency and new features. Introduced AdminShell integration to improve admin UI across GravityOps Search and Folders 4 Gravity, including new tabs like Overview, Help, and external link integrations. Refactored and optimized folder and view handling with better insights and structure.

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "gravityops/core": "dev-main"
+    "gravityops/core": ">=1.0.14"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
