--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "gravityops/core": "^1.0.28"
+    "gravityops/core": "1.0.28"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
