Remove unused SVG icon and update namespace handling
Deleted an obsolete SVG icon for Folders 4 Gravity. Streamlined namespace handling by replacing vendor-prefixed references, updating autoload configurations, and adjusting Strauss settings. Bumped the `gravityops/core` dependency to version 1.0.34 for compatibility. Updated asset paths and composer config for improved structure and maintainability.

--- a/.github/workflows/check-and-maybe-deploy.yml
+++ b/.github/workflows/check-and-maybe-deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: composer install --no-dev --no-progress --optimize-autoloader
 
+      - name: Prefix namespaces (Strauss)
+        run: composer prefix-namespaces
+
       # Run PCP check
       - name: PCP
         uses: wordpress/plugin-check-action@v1
@@ -91,6 +94,9 @@ jobs:
       # We install before the 10up action so the 'vendor' folder is populated with the private lib
       - name: Install dependencies
         run: composer install --no-dev --no-progress --optimize-autoloader
+
+      - name: Prefix namespaces (Strauss)
+        run: composer prefix-namespaces
 
       # Create a clean build directory.
       # This preserves the 'vendor' folder we just built with the SSH key.
