--- a/.github/workflows/check-and-maybe-deploy.yml
+++ b/.github/workflows/check-and-maybe-deploy.yml
@@ -26,6 +26,10 @@ jobs:
         with:
             ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_GRAVITYOPS_CORE }}
 
+      # Remove the local path repository so Composer uses the VCS (Git) one instead
+      - name: Remove local path repository
+        run: composer config repositories.0 --unset
+
       # This ensures the shared library classes are available for the PCP check
       - name: Install dependencies
         run: composer install --no-dev --no-progress --optimize-autoloader
@@ -94,6 +98,10 @@ jobs:
       # We install before the 10up action so the 'vendor' folder is populated with the private lib
       - name: Install dependencies
         run: composer install --no-dev --no-progress --optimize-autoloader
+
+      # Remove the local path repository so Composer uses the VCS (Git) one instead
+      - name: Remove local path repository
+        run: composer config repositories.0 --unset
 
       - name: Prefix namespaces (Strauss)
         run: composer prefix-namespaces
