--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
       "classmap_prefix": "F4G_",
       "constant_prefix": "F4G_",
       "packages": [
-        "gravityops/core"
+        "gravityops/core",
+        "trustedlogin/client"
       ],
       "delete_vendor_packages": true,
       "update_call_sites": [
